--- a/particles_editor.html
+++ b/particles_editor.html
@@ -21,30 +21,115 @@
         scale: { min: 0, max: 100, step: "any" },
         trailLifeTime: { min: 0, max: 10, step: 0.001 },
         trailInterval: { min: 0.05, max: 1, step: 0.01 },
+        destinationWeight: { min: 0, max: 1, step: 0.01 },
+        destinationOffset: { min: -10, max: 10, step: 0.01 },
       };
 
-      const data = {
+      const data = reactive({
         color: "#00f..#fff,#fff,#fff",
-        radialType: "circle",
-        spawnRate: "100",
-        lifeTime: "100",
-        radialPosition: ["5", "6"],
-        radialVelocity: ["0", "1"],
-        angularVelocity: ["0", "0", "5"],
-        scale: "0.8",
-        trailLifeTime: "2",
-        trailInterval: "0.1",
+        radialType: "sphere",
+        spawnRate: 100,
+        lifeTime: 1000,
+        radialPosition: { a: 1, b: 2 },
+        radialVelocity: { a: 0, b: 1 },
+        angularVelocity: { a: 0, b: 0, c: 0 },
+        scale: 1,
         texture: "#blob",
-      };
+        trailLifeTime: 2,
+        trailInterval: 0.1,
+      });
 
-      const isNumber = (value) => !isNaN(parseFloat(value));
+      const data2 = reactive({
+        color: "#fff",
+        opacity: {a: 0.5, b: 1},
+        radialType: "circleXZ",
+        spawnRate: 500,
+        lifeTime: 1000,
+        radialPosition: { a: 3, b: 5 },
+        radialVelocity: { a: 0, b: 2 },
+        angularVelocity: { a: 0, b: -10, c: 0 },
+        scale: 0.8,
+        texture: "#blob",
+        offset: 0
+      });
+
+      const box = reactive({
+        position: { x: 0, y: 0, z: 0 },
+        rotation: { x: 0, y: 0, z: 0 },
+        innerPosition: { x: 0, y: 0, z: 0 },
+      });
+
+      const animation = AFRAME.ANIME;
+
+      const dur = 300000;
+
+      animation({
+        targets: box.position,
+        x: 0,
+        y: [-2, 2],
+        z: 0,
+        duration: dur * 2,
+        easing: "easeInOutSine",
+        direction: "alternate",
+        loop: true,
+      });
+
+      animation({
+        targets: box.rotation,
+        x: 0,
+        y: -360,
+        z: 0,
+        duration: dur,
+        easing: "linear",
+        loop: true,
+      });
+
+      // animation({
+      //   targets: box.innerPosition,
+      //   x: 2,
+      //   y: 0,
+      //   z: 0,
+      //   duration: dur,
+      //   easing: "easeInOutSine",
+      //   direction: "alternate",
+      //   loop: true,
+      // });
+
+      animation({
+        targets: data.radialVelocity,
+        a: 0,
+        b: 0,
+        duration: dur,
+        easing: "easeInOutSine",
+        direction: "alternate",
+        loop: true,
+      });
+
+      animation({
+        targets: data,
+        trailLifeTime: 0.3,
+        duration: dur * 2,
+        easing: "easeOutSine",
+        direction: "alternate",
+        loop: true,
+      });
+
+      // animation({
+      //   targets: data2,
+      //   offset: -5,
+      //   duration: dur * 10,
+      //   easing: "easeOutSine",
+      // });
 
       createApp({
         fields,
         data,
+        data2,
         normalizeParticles,
         isNumber,
         angle: 80,
+        box,
+        speed: 2,
       }).mount();
     </script>
   </head>
@@ -55,11 +140,32 @@
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
+      <a-entity position="0 0 -20" rotation="0 0 0">
+        <a-entity :sprite-particles="normalizeParticles({...data2, radialPosition: { a: 3, b: 20 }, radialVelocity: { a: 0, b: 2 * speed },angularVelocity: { a: 0, b: 0, c: 0.1 * speed }})"></a-entity>
+
+        <a-entity :rotation="box.rotation"
+          v-for="y in [1,1.2,2,4,4.3]"
+          :position="{x: 0, y: 0, z: 0}"
+          :sprite-particles="normalizeParticles({...data2, radialPosition: { a: y - data2.offset, b: y + data2.offset}, radialVelocity: { a: 0, b: -10 * speed, c: 10 * speed },angularVelocity: { a: 10 * speed, b: -10 * speed, c: 0 }})"
+        ></a-entity>
+
+        <!-- <a-entity
+          position="0 0.5 0"
+          :sprite-particles="normalizeParticles({...data2, opacity: 0.5, radialPosition: { a: 1, b: 5 }})"
+        ></a-entity> -->
+
+        <a-entity :position="box.position" :rotation="box.rotation">
+          <a-entity :position="box.innerPosition">
+            <!-- <a-entity :sprite-particles="normalizeParticles(data)"></a-entity> -->
+          </a-entity>
+        </a-entity>
+      </a-entity>
+      <!-- 
       <a-entity
         :rotation="{x: -angle, y: 0, z: 0}"
         position="0 0 -40"
         :sprite-particles="normalizeParticles(data)"
-      ></a-entity>
+      ></a-entity> -->
 
       <a-camera></a-camera>
 
@@ -68,7 +174,7 @@
       </a-assets>
     </a-scene>
 
-    <div style="position: fixed; top: 16px; left: 16px">
+    <!-- <div style="position: fixed; top: 16px; left: 16px">
       <p>Rotation: {{ angle }}deg</p>
       <input
         type="range"
@@ -76,9 +182,9 @@
         max="90"
         style="margin-bottom: 8px"
       />
-      <div v-for="field, key in data" style="padding-bottom: 8px">
+      <div v-for="field, key in data2" style="padding-bottom: 8px">
         {{ key }}
-        <div v-if="Array.isArray(field)">
+        <div v-if="field.a !== undefined">
           <div
             v-for="col,i in field"
             style="display: flex; align-items: center; gap: 8px"
@@ -111,10 +217,10 @@
         </div>
       </div>
       <!-- <pre>{{ normalizeData(data) }}</pre> -->
-    </div>
+    </div> -->
 
     <div style="position: fixed; top: 16px; right: 16px">
-      <pre style="opacity: 0.7">{{ data }}</pre>
+      <!-- <pre style="opacity: 0.7">{{ data }}</pre> -->
     </div>
   </body>
   <style>
