--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
         opacity: 1,
       };
 
+      const starfield = {
+        color: "#fff",
+        opacity: { a: 0.1, b: 0.3 },
+        radialType: "circleXZ",
+        spawnRate: 500,
+        lifeTime: 10000,
+        radialPosition: { a: 2, b: 16 },
+        radialVelocity: { a: 0, b: 0.1 },
+        angularVelocity: { a: 0, b: 0, c: 0 },
+        scale: { a: 0.5, b: 1 },
+        texture: "#blob",
+        offset: 0,
+      };
+
       const r = reactive({
         time: 0,
         eventCounter: 0,
@@ -89,6 +103,8 @@
         userZMultipler: 0,
 
         particles,
+
+        starfield,
       });
 
       const onMessage = (data) => {
@@ -581,12 +597,22 @@
     >
       <!-- cometonics -->
 
-      <a-text
+      <a-entity
+        :position="{ x: 0, y: 0, z: -20 * (1 - r.userZMultipler)}"
+        :scale="{x: r.globalScale, y: r.globalScale, z: r.globalScale}"
+        :rotation="{x: r.globalRotation, y: 0, z: 0}"
+      >
+        <a-entity
+          :sprite-particles="normalizeParticles(r.starfield)"
+        ></a-entity>
+      </a-entity>
+
+      <!-- <a-text
         :visible="r.cometonics.visible"
         position="0 0 -20"
         value="cometronics"
         align="center"
-      ></a-text>
+      ></a-text> -->
 
       <!-- bigbang -->
 
