--- a/index.html
+++ b/index.html
@@ -881,14 +881,14 @@
         style="margin-bottom: 8px; display: block"
       />
       Playback speed (ms) <input v-model.number="r.globalFrequency" />
-      <p>{{ r.getPlaybackRate() }}</p>
+      <!-- <p>{{ r.getPlaybackRate() }}</p>
       <pre>{{ r.particles }}</pre>
       <pre>{{ { cometonics: r.cometonics } }}</pre>
       <pre>
 {{ Object.fromEntries(Object.keys(r.planets).map(key => [key, r.planets[key].opacity])) }}
       </pre>
       <pre>{{ r.messier }}</pre>
-      <pre>{{ r.galactic }}</pre>
+      <pre>{{ r.galactic }}</pre> -->
     </div>
 
     <div
