--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="https://unpkg.com/es-module-shims@1.5.17/dist/es-module-shims.js"></script>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <!-- <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script> -->
+    <script src="https://unpkg.com/aframe@1.0.4/dist/aframe-v1.0.4.min.js"></script>
+    <!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script> -->
+    <script src="https://unpkg.com/ar.js@2.2.2/aframe/build/aframe-ar.min.js"></script>
     <script src="https://unpkg.com/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/aframe-lines@1.1.0/lines.js"></script>
     <script src="https://unpkg.com/aframe-sprite-particles-component@^0.5.4/aframe-sprite-particles-component.js"></script>
@@ -666,7 +668,7 @@
           :sprite-particles="normalizeParticles(r.cometronicsStarfield)"
         ></a-entity>
         <a-entity
-          v-for="y in [1,1.2,2,3.8,4]"
+          v-for="y in [1,1.2,2,5,6.6]"
           :sprite-particles="normalizeParticles({
             ...r.cometronicsSphere, 
             radialPosition: { a: y, b: y }, 
