--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Timetrip to Big Bang and Back</title>
+    <title>"Timetrip to Big Bang and Back" loading...</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <script src="https://unpkg.com/es-module-shims@1.5.17/dist/es-module-shims.js"></script>
@@ -88,7 +88,7 @@
 
       const cometronicsSphere = {
         color: "#fff",
-        opacity: { a: 0.1, b: 1 },
+        opacity: { a: 0, b: 0 },
         radialType: "circleXZ",
         spawnRate: 500,
         lifeTime: 1000,
@@ -646,6 +646,13 @@
         onReset,
         normalizeParticles,
       }).mount();
+
+      document.addEventListener("DOMContentLoaded", function () {
+        var scene = document.querySelector("a-scene");
+        scene.addEventListener("loaded", function (e) {
+          console.log("loaded");
+        });
+      });
     </script>
   </head>
 
@@ -916,6 +923,21 @@
   </body>
 
   <style>
+    .a-loader-title {
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      justify-content: center !important;
+      align-items: center !important;
+      z-index: 10000;
+      text-transform: uppercase;
+      background-color: rgba(0, 0, 0, 0.8);
+      padding: 40vh 20vw;
+      line-height: 1.3em;
+    }
     body {
       font-family: sans-serif;
       color: white;
